--- a/towndeli/assets/less/main.less
+++ b/towndeli/assets/less/main.less
@@ -2980,6 +2980,7 @@ header.header {
                         margin: 20px;
                         border-radius: 5px;
                         .left {
+                            position: absolute;
                             color: #ffffff;
                             font-size: 13px;
                             font-weight: 500;
@@ -2990,13 +2991,58 @@ header.header {
                                 display: block;
                             }
                         }
+                        .right {
+                            height: 100px;
+                            width: 20px;
+                            float: right;
+                            margin: 10px;
+                            .up {
+                                background-color:  #ffffff;
+                                width: 20px;
+                                height: 20px;
+                                display: inline-block;
+                                span {
+                                    position: absolute;
+                                    margin-top: 5px;
+                                    margin-left: 4px;
+                                    width: 20px;
+                                    height: 20px;
+                                    background: url('../images/up.png') no-repeat;
+                                }
+                            }
+                            .paging {
+                                color:  #ffffff;
+                                font-size: 12px;
+                                font-weight: 400;
+                                line-height: 20px;
+                                text-align: left;
+                                margin-top: 5px;
+                                position: absolute;
+                            }
+                            .down {
+                                background-color:  #ffffff;
+                                width: 20px;
+                                height: 20px;
+                                display: inline-block;
+                                bottom: 10px;
+                                position: absolute;
+                                span {
+                                    position: absolute;
+                                    margin-top: 7px;
+                                    margin-left: 4px;
+                                    width: 20px;
+                                    height: 20px;
+                                    background: url('../images/down.png') no-repeat;
+                                }
+                            }
+                        }
                     }
                 }
                 .mid {
                     .main-line {
                         height: 10px;
                         margin: 0 20px;
-                        background: url('../images/line.png') no-repeat;
+                        background-color:  #d9d9d9;
                         a {
                             .icon {
                                 width: 40px;
