--- a/towndeli/assets/less/main.less
+++ b/towndeli/assets/less/main.less
@@ -2899,6 +2899,11 @@ header.header {
         .tracking-content {
             border-left: 1px solid #eee;
             padding: 20px 0 50px 20px;
+            @media (max-width: 860px) {
+                padding-left: 0;
+                padding-top: 0;
+                border-left: none;
+            }
             .row {
                 border: 1px solid #eee;
             }
