--- a/towndeli/assets/styles/styles.css
+++ b/towndeli/assets/styles/styles.css
@@ -10167,6 +10167,13 @@ header.header .top-links li .child-box ul li a.highlight {
   border-left: 1px solid #eee;
   padding: 20px 0 50px 20px;
 }
+@media (max-width: 860px) {
+  .main .wrap-tracking .tracking-content {
+    padding-left: 0;
+    padding-top: 0;
+    border-left: none;
+  }
+}
 .main .wrap-tracking .tracking-content .row {
   border: 1px solid #eee;
 }
