--- a/towndeli/assets/styles/styles.css
+++ b/towndeli/assets/styles/styles.css
@@ -10279,6 +10279,17 @@ header.header .top-links li .child-box ul li a.highlight {
   padding-left: 20px;
   color: #ff9800;
 }
+.main .wrap-tracking .tracking-content .general-info .wrapper.made .icon {
+  position: absolute;
+  margin-top: 3px;
+  width: 17px;
+  height: 16px;
+  background: url('../images/made.png');
+}
+.main .wrap-tracking .tracking-content .general-info .wrapper.made .status {
+  padding-left: 20px;
+  color: #22b99b;
+}
 .main .wrap-tracking .tracking-content .orders-flow {
   min-height: 300px;
   background-color: #eee;
@@ -10291,22 +10302,21 @@ header.header .top-links li .child-box ul li a.highlight {
 .main .wrap-tracking .tracking-content .orders-flow .top .content {
   background-color: #27b99b;
   min-width: 235px;
-  height: 100px;
   position: absolute;
-  margin: 20px;
   border-radius: 5px;
   margin: 20px 20px 0 20px;
-}
-.main .wrap-tracking .tracking-content .orders-flow .top .content .left {
-  position: absolute;
   color: #ffffff;
   font-size: 13px;
   font-weight: 500;
-  line-height: 25px;
+  line-height: 23px;
   text-align: left;
   padding-left: 15px;
 }
-.main .wrap-tracking .tracking-content .orders-flow .top .content .left span {
+.main .wrap-tracking .tracking-content .orders-flow .top .content .left {
+  position: absolute;
+  padding-top: 4px;
+}
+.main .wrap-tracking .tracking-content .orders-flow .top .content span {
   display: block;
 }
 .main .wrap-tracking .tracking-content .orders-flow .top .content .right {
@@ -10354,6 +10364,82 @@ header.header .top-links li .child-box ul li a.highlight {
   height: 20px;
   background: url('../images/down.png') no-repeat;
 }
+.main .wrap-tracking .tracking-content .orders-flow .top .content-step-1 {
+  margin-left: 20px;
+  height: 100px;
+}
+.main .wrap-tracking .tracking-content .orders-flow .top .content-step-1:before {
+  content: '';
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  margin-top: 100px;
+  background: url('../images/icon1.png') no-repeat;
+}
+.main .wrap-tracking .tracking-content .orders-flow .top .content-step-2 {
+  margin-left: 200px;
+  max-width: 256px;
+  min-width: 235px;
+  min-height: 100px;
+  padding-right: 5px;
+}
+@media (max-width: 1200px) {
+  .main .wrap-tracking .tracking-content .orders-flow .top .content-step-2 {
+    margin-left: 120px;
+  }
+  .main .wrap-tracking .tracking-content .orders-flow .top .content-step-2:before {
+    margin-left: 60px !important;
+  }
+}
+@media (max-width: 860px) {
+  .main .wrap-tracking .tracking-content .orders-flow .top .content-step-2:before {
+    margin-left: 100px !important;
+  }
+}
+@media (max-width: 768px) {
+  .main .wrap-tracking .tracking-content .orders-flow .top .content-step-2 {
+    margin-left: 140px;
+  }
+  .main .wrap-tracking .tracking-content .orders-flow .top .content-step-2:before {
+    margin-left: 50px !important;
+  }
+}
+@media (max-width: 520px) {
+  .main .wrap-tracking .tracking-content .orders-flow .top .content-step-2 {
+    margin-left: 100px;
+  }
+  .main .wrap-tracking .tracking-content .orders-flow .top .content-step-2:before {
+    margin-left: 20px !important;
+  }
+}
+@media (max-width: 420px) {
+  .main .wrap-tracking .tracking-content .orders-flow .top .content-step-2 {
+    margin-left: 20px;
+  }
+  .main .wrap-tracking .tracking-content .orders-flow .top .content-step-2:before {
+    margin-left: 50px !important;
+  }
+}
+.main .wrap-tracking .tracking-content .orders-flow .top .content-step-2:before {
+  content: '';
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  margin-top: 100px;
+  margin-left: 10px;
+  background: url('../images/icon1.png') no-repeat;
+}
+.main .wrap-tracking .tracking-content .orders-flow .top .content-step-2 .home-icon {
+  position: absolute;
+  margin-top: 8px;
+  width: 16px;
+  height: 14px;
+  background: url('../images/home.png');
+}
+.main .wrap-tracking .tracking-content .orders-flow .top .content-step-2 .address {
+  padding-left: 20px;
+  padding-top: 5px;
+}
 .main .wrap-tracking .tracking-content .orders-flow .mid {
   padding-bottom: 20px;
 }
@@ -10362,13 +10448,36 @@ header.header .top-links li .child-box ul li a.highlight {
   z-index: 1;
   padding: 0 10px;
 }
-.main .wrap-tracking .tracking-content .orders-flow .mid .step-menu .line {
+.main .wrap-tracking .tracking-content .orders-flow .mid .step-menu .full-line {
   height: 10px;
   background-color: #d9d9d9;
   width: 95%;
   margin-top: 15px;
   position: relative;
   margin-left: 5px;
+}
+.main .wrap-tracking .tracking-content .orders-flow .mid .step-menu .line-step2 {
+  height: 10px;
+  background-color: #62a910;
+  width: 22%;
+  position: absolute;
+  margin-left: 39px;
+  z-index: 10;
+}
+.main .wrap-tracking .tracking-content .orders-flow .mid .step-menu .line-step2 .circle {
+  position: relative;
+  border-radius: 50%;
+  float: right;
+  margin-right: -10px;
+  margin-top: -2px;
+  background-color: #62a910;
+  width: 15px;
+  height: 15px;
+}
+@media (max-width: 420px) {
+  .main .wrap-tracking .tracking-content .orders-flow .mid .step-menu .line-step2 {
+    width: 12%;
+  }
 }
 .main .wrap-tracking .tracking-content .orders-flow .mid .step-menu ul {
   list-style-position: inside;
