--- a/towndeli/assets/less/main.less
+++ b/towndeli/assets/less/main.less
@@ -3003,6 +3003,19 @@ header.header {
                             color: #ff9800;
                         }
                     }
+                    &.made {
+                        .icon {
+                            position: absolute;
+                            margin-top: 3px;
+                            width: 17px;
+                            height: 16px;
+                            background: url('../images/made.png');
+                        }
+                        .status {
+                            padding-left: 20px;
+                            color: #22b99b;
+                        }
+                    }
                 }
             }
             .orders-flow {
@@ -3015,22 +3028,21 @@ header.header {
                     .content {
                         background-color:  #27b99b;
                         min-width: 235px;
-                        height: 100px;
                         position: absolute;
-                        margin: 20px;
                         border-radius: 5px;
                         margin: 20px 20px 0 20px;
+                        color: #ffffff;
+                        font-size: 13px;
+                        font-weight: 500;
+                        line-height: 23px;
+                        text-align: left;
+                        padding-left: 15px;
                         .left {
                             position: absolute;
-                            color: #ffffff;
-                            font-size: 13px;
-                            font-weight: 500;
-                            line-height: 25px;
-                            text-align: left;
-                            padding-left: 15px;
-                            span {
-                                display: block;
-                            }
+                            padding-top: 4px;
+                        }
+                        span {
+                            display: block;
                         }
                         .right {
                             height: 100px;
@@ -3078,17 +3090,108 @@ header.header {
                             }
                         }
                     }
+                    .content-step-1 {
+                        margin-left: 20px;
+                        height: 100px;
+                        &:before {
+                            content: '';
+                            position: absolute;
+                            width: 20px;
+                            height: 20px;
+                            margin-top: 100px;
+                            background: url('../images/icon1.png') no-repeat;
+                        }
+                    }
+
+                    .content-step-2 {
+                        margin-left: 200px;
+                        max-width: 256px;
+                        min-width: 235px;
+                        min-height: 100px;
+                        padding-right: 5px;
+                        @media (max-width: 1200px) {
+                            margin-left: 120px;
+                            &:before {
+                                margin-left: 60px !important;
+                            }
+                        }
+                        @media (max-width: 860px) {
+                            &:before {
+                                margin-left: 100px !important;
+                            }
+                        }
+                        @media (max-width: 768px) {
+                            margin-left: 140px;
+                            &:before {
+                                margin-left: 50px !important;
+                            }
+                        }
+                        @media (max-width: 520px) {
+                            margin-left: 100px;
+                            &:before {
+                                margin-left: 20px !important;
+                            }
+                        }
+                        @media (max-width: 420px) {
+                            margin-left: 20px;
+                            &:before {
+                                margin-left: 50px !important;
+                            }
+                        }
+                        &:before {
+                            content: '';
+                            position: absolute;
+                            width: 20px;
+                            height: 20px;
+                            margin-top: 100px;
+                            margin-left: 10px;
+                            background: url('../images/icon1.png') no-repeat;
+                        }
+
+                        .home-icon {
+                            position: absolute;
+                            margin-top: 8px;
+                            width: 16px;
+                            height: 14px;
+                            background: url('../images/home.png');
+                        }
+                        .address{
+                            padding-left: 20px;
+                            padding-top: 5px;
+                        }
+                    }
                 }
                 .mid {
                     padding-bottom: 20px;
                     .step-menu {
-                        .line {
+                        .full-line {
                             height: 10px;
                             background-color:  #d9d9d9;
                             width: 95%;
                             margin-top: 15px;
                             position: relative;
                             margin-left: 5px;
+                        }
+                        .line-step2 {
+                            height: 10px;
+                            background-color:  #62a910;
+                            width: 22%;
+                            position: absolute;
+                            margin-left: 39px;
+                            z-index: 10;
+                            .circle {
+                                position: relative;
+                                border-radius: 50%;
+                                float: right;
+                                margin-right: -10px;
+                                margin-top: -2px;
+                                background-color:  #62a910;
+                                width: 15px;
+                                height: 15px;
+                            }
+                            @media (max-width: 420px) {
+                                width: 12%;
+                            }
                         }
                         position: relative;
                         z-index: 1;
